--- a/RemoteController/RemoteController.WinUi/Views/GenericPage.xaml
+++ b/RemoteController/RemoteController.WinUi/Views/GenericPage.xaml
@@ -34,12 +34,20 @@
             <winUi:SettingsExpander.Items>
                 <winUi:SettingsCard 
                     Header="Port">
-                    <NumberBox 
-                        Value="{x:Bind ViewModel.Server.Http.Port}" 
-                        Minimum="1" 
-                        Maximum="65535" 
-                        IsEnabled="{x:Bind ToggleSwitchServerIsRunning.IsOn, Converter={StaticResource Converter.InverseBoolean}}"
-                        />
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock
+                            Text="Changes will be applied on next run."
+                            Visibility="{x:Bind ViewModel.IsServerPortChanged, Converter={StaticResource Converter.FalseToVisible}}"
+                            VerticalAlignment="Center"
+                            Margin="12 0"
+                            /> 
+                        <NumberBox 
+                            Value="{x:Bind ViewModel.ServerPort, Mode=TwoWay}" 
+                            Minimum="1" 
+                            Maximum="65535" 
+                            IsEnabled="{x:Bind ToggleSwitchServerIsRunning.IsOn, Converter={StaticResource Converter.InverseBoolean}}"
+                            />
+                    </StackPanel>
                 </winUi:SettingsCard>
                 <winUi:SettingsCard
                     Header="Auto-Start with app">
