--- a/RemoteController/RemoteController.WinUi/Views/FoldersPage.xaml
+++ b/RemoteController/RemoteController.WinUi/Views/FoldersPage.xaml
@@ -1,21 +1,55 @@
 ﻿<Page
     x:Class="RemoteController.WinUi.Views.FoldersPage"
+    x:Name="root"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:winUi="using:CommunityToolkit.Labs.WinUI"
     xmlns:ui="using:CommunityToolkit.WinUI.UI"
+    xmlns:contexts="using:RemoteController.Manipulator.Contexts"
     mc:Ignorable="d">
+    <Page.Resources>
+        <DataTemplate 
+            x:Key="DataTemplate.FileSystemPath"
+            x:DataType="contexts:FileSystemPath">
+            <winUi:SettingsCard
+                HeaderIcon="{ui:FontIcon Glyph=&#xE838;}"
+                Header="{x:Bind Name}"
+                Description="{x:Bind Path}"
+                Command="{Binding ElementName=root, Path=ViewModel.EditPathCommand}"
+                CommandParameter="{x:Bind}"
+                IsActionIconVisible="True"
+                IsClickEnabled="True">
+                <StackPanel Orientation="Horizontal">
+                    <Button
+                        Content="{ui:FontIcon Glyph=&#xE74D;, FontSize=16}"
+                        ToolTipService.ToolTip="Delete"
+                        ToolTipService.Placement="Bottom"
+                        Command="{Binding ElementName=root, Path=ViewModel.DeletePathCommand}"
+                        CommandParameter="{x:Bind}"
+                        />
+                </StackPanel>
+            </winUi:SettingsCard>
+        </DataTemplate>
+    </Page.Resources>
 
-    <StackPanel Orientation="Vertical">
-        <winUi:SettingsCard
-            HeaderIcon="{ui:FontIcon Glyph=&#xE838;}"
-            Header="Create public folder"
-            Description="Add folder that will be available via remote service."
-            Command="{x:Bind ViewModel.GoToCreateCommand}"
-            IsActionIconVisible="True"
-            IsClickEnabled="True"
-            />
-    </StackPanel>
+    <ScrollViewer HorizontalScrollMode="Disabled">
+        <StackPanel Orientation="Vertical">
+            <winUi:SettingsCard
+                HeaderIcon="{ui:FontIcon Glyph=&#xE8F4;}"
+                Header="Create public folder"
+                Description="Add folder that will be available via remote service."
+                Command="{x:Bind ViewModel.GoToCreateCommand}"
+                IsActionIconVisible="True"
+                IsClickEnabled="True"
+                Margin="0 0 0 20"
+                />
+
+            <ItemsControl
+                ItemsSource="{x:Bind ViewModel.Paths}"
+                ItemTemplate="{StaticResource DataTemplate.FileSystemPath}"
+                />
+        </StackPanel>
+    </ScrollViewer>
 </Page>
