--- a/RemoteController/RemoteController.WinUi/Views/ShellPage.xaml
+++ b/RemoteController/RemoteController.WinUi/Views/ShellPage.xaml
@@ -2,29 +2,28 @@
     x:Class="RemoteController.WinUi.Views.ShellPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:helpers="using:RemoteController.WinUi.Helpers"
     xmlns:behaviors="using:RemoteController.WinUi.Behaviors"
     xmlns:i="using:Microsoft.Xaml.Interactivity"
     xmlns:viewModels="using:RemoteController.WinUi.ViewModels"
     Loaded="OnLoaded">
-
     <Grid>
-        <Grid x:Name="AppTitleBar"
-              Canvas.ZIndex="1"
-              Height="{Binding ElementName=NavigationViewControl, Path=CompactPaneLength}"
-              IsHitTestVisible="True"
-              VerticalAlignment="Top">
-            <Image Source="/Assets/WindowIcon.ico"
-                   HorizontalAlignment="Left"
-                   Width="16"
-                   Height="16" />
-            <TextBlock x:Name="AppTitleBarText"
-                       VerticalAlignment="Center"
-                       TextWrapping="NoWrap"
-                       Style="{StaticResource CaptionTextBlockStyle}"
-                       Margin="28,0,0,0"/>
+        <Grid 
+            x:Name="AppTitleBar"
+            Canvas.ZIndex="1"
+            Height="{Binding ElementName=NavigationViewControl, Path=CompactPaneLength}"
+            IsHitTestVisible="True"
+            VerticalAlignment="Top">
+            <Image 
+                Source="/Assets/WindowIcon.ico"
+                HorizontalAlignment="Left"
+                Width="16"
+                Height="16" />
+            <TextBlock
+                x:Name="AppTitleBarText"
+                VerticalAlignment="Center"
+                TextWrapping="NoWrap"
+                Style="{StaticResource CaptionTextBlockStyle}"
+                Margin="28,0,0,0"/>
         </Grid>
         <NavigationView
             x:Name="NavigationViewControl"
@@ -35,7 +34,7 @@
             IsSettingsVisible="True"
             ExpandedModeThresholdWidth="1280"
             DisplayModeChanged="NavigationViewControl_DisplayModeChanged"
-            Header="{x:Bind ViewModel.Selected.Content, Mode=OneWay}">
+            Header="{x:Bind ViewModel.Selected.Content, Mode=OneWay, FallbackValue={x:Null}}">
             <NavigationView.HeaderTemplate>
                 <DataTemplate>
                     <Grid>
@@ -57,14 +56,14 @@
                                 </Grid.ColumnDefinitions>
                                 <TextBlock
                                     Grid.Column="0"
-                                    Text="{x:Bind Selected.Content}"
+                                    Text="{x:Bind Selected.Content, FallbackValue=''}"
                                     Style="{ThemeResource TitleTextBlockStyle}" />
                                 <ContentControl
                                     Grid.Column="1"
                                     HorizontalContentAlignment="Center"
                                     HorizontalAlignment="Center"
                                     Margin="0 0 44 0"
-                                    Content="{x:Bind SelectedPage.HeaderContent}"
+                                    Content="{x:Bind SelectedPage.HeaderContent, FallbackValue={x:Null}}"
                                     />
                             </Grid>
                         </DataTemplate>
