--- a/RemoteController/RemoteController.WinUi.Controls/Themes/Generic.xaml
+++ b/RemoteController/RemoteController.WinUi.Controls/Themes/Generic.xaml
@@ -2,26 +2,13 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:RemoteController.WinUi.Controls">
-
-    <ControlTemplate 
-        x:Key="CustomControl1.Template"
-        TargetType="local:CustomControl1">
-        <Border
-            Background="{TemplateBinding Background}"
-            BorderBrush="{TemplateBinding BorderBrush}"
-            BorderThickness="{TemplateBinding BorderThickness}">
-        </Border>
-    </ControlTemplate>
-
-    <Style TargetType="local:CustomControl1" >
-        <Setter Property="Height" Value="100" />
-        <Setter Property="Width" Value="200" />
-        <Setter Property="Background" Value="Lime" />
-        <Setter Property="Template" Value="{StaticResource CustomControl1.Template}" />
-    </Style>
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="../Resoruces/KeyVisual.xaml" />
+    </ResourceDictionary.MergedDictionaries>
 
     <Style TargetType="Page" x:Key="Page.Style"></Style>
     <Style TargetType="local:PageWithHeaderContent"
            BasedOn="{StaticResource Page.Style}">
     </Style>
+
 </ResourceDictionary>
