Working on Hotkeys page.

--- a/RemoteController/RemoteController.WinUi/Views/HotkeysPage.xaml
+++ b/RemoteController/RemoteController.WinUi/Views/HotkeysPage.xaml
@@ -9,9 +9,10 @@
     <controls:PageWithHeaderContent.HeaderContent>
         <Button
             Content="Restart hooks"
-            Command="{x:Bind ViewModel.RestartHookCommand}" 
-            />
+            Command="{x:Bind ViewModel.RestartHookCommand}">
+        </Button>
     </controls:PageWithHeaderContent.HeaderContent>
     <Grid x:Name="ContentArea">
+        
     </Grid>
 </controls:PageWithHeaderContent>
