--- a/RemoteController/RemoteController.WinUi/Styles/Converters.xaml
+++ b/RemoteController/RemoteController.WinUi/Styles/Converters.xaml
@@ -9,5 +9,5 @@
         x:Key="Converter.FalseToVisible"
         TrueVisibility="Collapsed"
         FalseVisibility="Visible" />
-
+    <c:GestureToVirtualKeysConverter x:Key="Converter.GestureToVirtualKeys" />
 </ResourceDictionary>
