--- a/RemoteController/RemoteController.WinUi/Styles/Controls/KeyVisual.xaml
+++ b/RemoteController/RemoteController.WinUi/Styles/Controls/KeyVisual.xaml
@@ -1,31 +1,30 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="using:RemoteController.WinUi.Controls">
-
-    <x:Double x:Key="KeyVisual.DefaultIconSize">16</x:Double>
-    <x:Double x:Key="KeyVisual.SmallIconSize">12</x:Double>
-    <ControlTemplate x:Key="KeyVisual.Template"  TargetType="controls:KeyVisual">
+    xmlns:c="using:RemoteController.WinUi.Controls">
+    <x:Double x:Key="KeyVisual.IconSize.Default">16</x:Double>
+    <x:Double x:Key="KeyVisual.IconSize.Small">12</x:Double>
+    <ControlTemplate x:Key="KeyVisual.Template" TargetType="c:KeyVisual">
         <Grid>
             <Grid>
                 <Rectangle
-                    x:Name="ContentHolder"
-                    Height="{TemplateBinding Height}"
-                    MinWidth="{TemplateBinding MinWidth}"
-                    Fill="{TemplateBinding Background}"
-                    RadiusX="4"
-                    RadiusY="4"
-                    Stroke="{TemplateBinding BorderBrush}"
-                    StrokeThickness="{TemplateBinding BorderThickness}" />
+                     x:Name="ContentHolder"
+                     Height="{TemplateBinding Height}"
+                     MinWidth="{TemplateBinding MinWidth}"
+                     Fill="{TemplateBinding Background}"
+                     RadiusX="4"
+                     RadiusY="4"
+                     Stroke="{TemplateBinding BorderBrush}"
+                     StrokeThickness="{TemplateBinding BorderThickness}" />
                 <ContentPresenter
-                    x:Name="KeyPresenter"
-                    Margin="{TemplateBinding Padding}"
-                    HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                    VerticalAlignment="Center"
-                    Content="{TemplateBinding Content}"
-                    FontSize="{TemplateBinding FontSize}"
-                    FontWeight="{TemplateBinding FontWeight}"
-                    Foreground="{TemplateBinding Foreground}" />
+                     x:Name="KeyPresenter"
+                     Margin="{TemplateBinding Padding}"
+                     HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                     VerticalAlignment="Center"
+                     Content="{TemplateBinding Content}"
+                     FontSize="{TemplateBinding FontSize}"
+                     FontWeight="{TemplateBinding FontWeight}"
+                     Foreground="{TemplateBinding Foreground}" />
             </Grid>
             <VisualStateManager.VisualStateGroups>
                 <VisualStateGroup x:Name="CommonStates">
@@ -35,7 +34,7 @@
                             <Setter Target="ContentHolder.Fill" Value="{ThemeResource AccentButtonBackgroundDisabled}" />
                             <Setter Target="KeyPresenter.Foreground" Value="{ThemeResource AccentButtonForegroundDisabled}" />
                             <Setter Target="ContentHolder.Stroke" Value="{ThemeResource AccentButtonBorderBrushDisabled}" />
-                            <!--<Setter Target="ContentHolder.StrokeThickness" Value="{TemplateBinding BorderThickness}" />-->
+                            <Setter Target="ContentHolder.StrokeThickness" Value="{TemplateBinding BorderThickness}" />
                         </VisualState.Setters>
                     </VisualState>
                 </VisualStateGroup>
@@ -55,7 +54,7 @@
     </ControlTemplate>
 
     <Style x:Key="KeyVisual.Style.Default"
-           TargetType="controls:KeyVisual">
+        TargetType="c:KeyVisual">
         <Setter Property="MinWidth" Value="56" />
         <Setter Property="MinHeight" Value="48" />
         <Setter Property="Background" Value="{ThemeResource AccentButtonBackground}" />
@@ -69,19 +68,19 @@
         <Setter Property="FontSize" Value="18" />
         <Setter Property="Template" Value="{StaticResource KeyVisual.Template}" />
     </Style>
-    <Style TargetType="controls:KeyVisual"
-           BasedOn="{StaticResource KeyVisual.Style.Default}" />
+    <Style TargetType="c:KeyVisual"
+        BasedOn="{StaticResource KeyVisual.Style.Default}" />
 
     <Style 
-        x:Key="DefaultTextKeyVisualStyle" 
-        TargetType="controls:KeyVisual"
-        BasedOn="{StaticResource KeyVisual.Style.Default}">
+         x:Key="DefaultTextKeyVisualStyle" 
+         TargetType="c:KeyVisual"
+         BasedOn="{StaticResource KeyVisual.Style.Default}">
     </Style>
 
     <Style
-        x:Key="KeyVisual.Style.Text.Small"
-        BasedOn="{StaticResource KeyVisual.Style.Default}"
-        TargetType="controls:KeyVisual">
+         x:Key="KeyVisual.Style.Text.Small"
+         BasedOn="{StaticResource KeyVisual.Style.Default}"
+         TargetType="c:KeyVisual">
         <Setter Property="MinWidth" Value="40" />
         <Setter Property="Height" Value="36" />
         <Setter Property="FontWeight" Value="SemiBold" />
@@ -91,9 +90,9 @@
     </Style>
 
     <Style
-        x:Key="KeyVisual.Style.Text.SmallOutline"
-        BasedOn="{StaticResource KeyVisual.Style.Default}"
-        TargetType="controls:KeyVisual">
+         x:Key="KeyVisual.Style.Text.SmallOutline"
+         BasedOn="{StaticResource KeyVisual.Style.Default}"
+         TargetType="c:KeyVisual">
         <Setter Property="MinWidth" Value="40" />
         <Setter Property="Background" Value="{ThemeResource ButtonBackground}" />
         <Setter Property="Foreground" Value="{ThemeResource ButtonForeground}" />
@@ -106,9 +105,9 @@
     </Style>
 
     <Style
-        x:Key="KeyVisual.Style.Icon.Default"
-        BasedOn="{StaticResource KeyVisual.Style.Default}"
-        TargetType="controls:KeyVisual">
+         x:Key="KeyVisual.Style.Icon.Default"
+         BasedOn="{StaticResource KeyVisual.Style.Default}"
+         TargetType="c:KeyVisual">
         <Setter Property="MinWidth" Value="56" />
         <Setter Property="MinHeight" Value="48" />
         <Setter Property="FontFamily" Value="{ThemeResource SymbolThemeFontFamily}" />
@@ -118,9 +117,9 @@
     </Style>
 
     <Style
-        x:Key="KeyVisual.Style.Icon.Small"
-        BasedOn="{StaticResource KeyVisual.Style.Default}"
-        TargetType="controls:KeyVisual">
+         x:Key="KeyVisual.Style.Icon.Small"
+         BasedOn="{StaticResource KeyVisual.Style.Default}"
+         TargetType="c:KeyVisual">
         <Setter Property="MinWidth" Value="40" />
         <Setter Property="Height" Value="36" />
         <Setter Property="FontFamily" Value="{ThemeResource SymbolThemeFontFamily}" />
@@ -131,9 +130,9 @@
     </Style>
 
     <Style
-        x:Key="KeyVisual.Style.Icon.SmallOutline"
-        BasedOn="{StaticResource KeyVisual.Style.Default}"
-        TargetType="controls:KeyVisual">
+         x:Key="KeyVisual.Style.Icon.SmallOutline"
+         BasedOn="{StaticResource KeyVisual.Style.Default}"
+         TargetType="c:KeyVisual">
         <Setter Property="MinWidth" Value="40" />
         <Setter Property="Background" Value="{ThemeResource ButtonBackground}" />
         <Setter Property="Foreground" Value="{ThemeResource ButtonForeground}" />
@@ -147,9 +146,9 @@
     </Style>
 
     <Style
-        x:Key="KeyVisual.Style.Text.Only"
-        BasedOn="{StaticResource KeyVisual.Style.Default}"
-        TargetType="controls:KeyVisual">
+         x:Key="KeyVisual.Style.Text.Only"
+         BasedOn="{StaticResource KeyVisual.Style.Default}"
+         TargetType="c:KeyVisual">
         <Setter Property="MinHeight" Value="12" />
         <Setter Property="MinWidth" Value="12" />
         <Setter Property="Background" Value="Transparent" />
@@ -162,9 +161,9 @@
     </Style>
 
     <Style
-        x:Key="KeyVisual.Style.Icon.Only"
-        BasedOn="{StaticResource KeyVisual.Style.Default}"
-        TargetType="controls:KeyVisual">
+         x:Key="KeyVisual.Style.Icon.Only"
+         BasedOn="{StaticResource KeyVisual.Style.Default}"
+         TargetType="c:KeyVisual">
         <Setter Property="MinHeight" Value="10" />
         <Setter Property="MinWidth" Value="10" />
         <Setter Property="Background" Value="Transparent" />
@@ -173,7 +172,7 @@
         <Setter Property="FontFamily" Value="{ThemeResource SymbolThemeFontFamily}" />
         <Setter Property="FontWeight" Value="Normal" />
         <Setter Property="Padding" Value="0,0,0,3" />
-        <!--<Setter Property="FontSize" Value="9" />-->
+        <Setter Property="FontSize" Value="9" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
     </Style>
 </ResourceDictionary>
