Controls to display Gesture and MultiKeyGesture in UI. No edit for now.
Reduce icons size for VirtualKeyVisual.
Change from icon to text for Shift key.

--- a/RemoteController/RemoteController.WinUi/App.xaml
+++ b/RemoteController/RemoteController.WinUi/App.xaml
@@ -14,7 +14,7 @@
                 <ResourceDictionary Source="/Styles/Thickness.xaml" />
                 <ResourceDictionary Source="/Styles/TextBlock.xaml" />
 
-                <ResourceDictionary Source="/Styles/Controls/VirtualKeyVisual.xaml" />
+                <ResourceDictionary Source="/Styles/Controls/_All.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <SolidColorBrush x:Key="WindowCaptionBackground">Transparent</SolidColorBrush>
             <SolidColorBrush x:Key="WindowCaptionBackgroundDisabled">Transparent</SolidColorBrush>
